--- a/package.json
+++ b/package.json
@@ -33,6 +33,8 @@
   "dependencies": {
     "@picocss/pico": "^1.5.6",
     "@prisma/client": "^4.2.1",
+    "chart.js": "^4.2.0",
+    "svelte-chartjs": "^3.1.2",
     "svelte-media-queries": "^1.5.2"
   },
   "prisma": {
