--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@picocss/pico": "^1.5.6",
     "@prisma/client": "^4.2.1",
     "chart.js": "^4.2.0",
+    "iconify-icon": "^1.0.2",
     "svelte-chartjs": "^3.1.2",
     "svelte-media-queries": "^1.5.2"
   },
