--- a/package.json
+++ b/package.json
@@ -38,7 +38,8 @@
     "chart.js": "^4.2.0",
     "iconify-icon": "^1.0.2",
     "svelte-chartjs": "^3.1.2",
-    "svelte-media-queries": "^1.5.2"
+    "svelte-media-queries": "^1.5.2",
+    "zod": "^3.20.2"
   },
   "prisma": {
     "seed": "ts-node prisma/seed.ts"
