--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@prisma/client": "^4.2.1",
     "@types/chart.js": "^2.9.37",
     "chart.js": "^4.2.0",
+    "cross-blob": "^3.0.2",
     "iconify-icon": "^1.0.2",
     "svelte-chartjs": "^3.1.2",
     "svelte-media-queries": "^1.5.2",
