--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "svelte-chartjs": "^3.1.2",
     "svelte-check": "^3.3.1",
     "svelte-media-queries": "^1.5.4",
+    "svelte-preprocess": "^5.0.3",
     "svelte-time": "^0.7.1",
     "zod": "^3.21.4"
   },
