Add Recaptcha env var

--- a/.env.example
+++ b/.env.example
@@ -9,4 +9,7 @@ DATABASE_URL="placeholder"
 SECRET_SEARCH_ENGINE_ID="placeholder"
 SECRET_API_KEY="placeholder"
 
+#GoogleRecaptcha
+SECRET_RECAPTCHA_KEY="placeholder"
+
 #PUBLIC
