--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
+    "autoprefixer": "^10.4.15",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-svelte3": "^4.0.0",
+    "postcss": "^8.4.29",
     "prettier": "^2.8.8",
     "prettier-plugin-svelte": "^2.10.0",
+    "tailwindcss": "^3.3.3",
     "ts-node": "10.9.1",
     "tslib": "^2.5.0",
     "typescript": "^4.9.5",
@@ -24,21 +27,24 @@
   },
   "type": "module",
   "dependencies": {
+    "@lucia-auth/adapter-prisma": "^3.0.1",
+    "@lucia-auth/oauth": "^3.1.0",
     "@picocss/pico": "^1.5.10",
-    "@prisma/client": "^4.13.0",
+    "@prisma/client": "^4.16.2",
     "@sveltejs/adapter-auto": "^1.0.3",
     "@sveltejs/adapter-cloudflare": "^1.1.0",
     "@sveltejs/kit": "^1.16.2",
-    "@sveltejs/package": "^1.0.2",
     "@types/chart.js": "^2.9.37",
     "chart.js": "^4.3.0",
     "cross-blob": "^3.0.2",
+    "daisyui": "^3.7.3",
     "iconify-icon": "^1.0.7",
-    "prisma": "4.8.1",
+    "lucia": "^2.5.0",
+    "playwright": "^1.37.1",
+    "prisma": "4.16.2",
     "svelte": "^3.59.0",
     "svelte-chartjs": "^3.1.2",
     "svelte-check": "^3.3.1",
-    "svelte-media-queries": "^1.5.4",
     "svelte-preprocess": "^5.0.3",
     "svelte-time": "^0.7.1",
     "zod": "^3.21.4"
