--- a/.env.example
+++ b/.env.example
@@ -1,15 +1,31 @@
 # When adding additional env variables, the schema in /env/schema.mjs should be updated accordingly
 
+# Build
 
-# SECRET
 # Prisma
-DATABASE_URL="placeholder"
+DATABASE_URL=
 
 #GoogleAPi
-SECRET_SEARCH_ENGINE_ID="placeholder"
-SECRET_API_KEY="placeholder"
 
-#GoogleRecaptcha
-SECRET_RECAPTCHA_KEY="placeholder"
+SECRET_SEARCH_ENGINE_ID=
+SECRET_API_KEY=
+SECRET_RECAPTCHA_SECRET = 
+SECRET_RECAPTCHA_SITEKEY =
 
-#PUBLIC
+# Bright Data
+
+SECRET_BRIGHT_DATA_URL = 
+
+
+# Github
+
+SECRET_GITHUB_SECRET = 
+SECRET_GITHUB_CLIENT_ID = 
+
+# CLOUDFLAREPROXY
+
+PUBLIC_CLOUDFLARE_WORKER_API_KEY = 
+
+# Linkomat
+
+PUBLIC_LINKOMAT_API_KEY = 
