--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
   "devDependencies": {
+    "@iconify/icons-iconamoon": "^1.2.0",
     "@iconify/icons-mdi": "^1.2.47",
     "@iconify/svelte": "^3.1.4",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
