--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "dev": "vite dev --host",
     "build": "vite build",
     "preview": "vite preview",
+    "postinstall": "prisma generate",
     "check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
     "check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
   },
@@ -43,6 +44,7 @@
     "iconify-icon": "^1.0.7",
     "lucia": "^2.5.0",
     "lucide-svelte": "^0.276.0",
+    "node-fetch": "^3.3.2",
     "playwright": "^1.37.1",
     "prisma": "4.16.2",
     "svelte-check": "^3.5.1",
