--- a/package.json
+++ b/package.json
@@ -41,10 +41,13 @@
     "chart.js": "^4.4.0",
     "clsx": "^2.0.0",
     "cross-blob": "^3.0.2",
+    "https-proxy-agent": "^7.0.2",
     "iconify-icon": "^1.0.7",
     "lucia": "^2.5.0",
     "lucide-svelte": "^0.276.0",
+    "node-curl-impersonate": "^1.4.0",
     "node-fetch": "^3.3.2",
+    "node-libcurl": "^3.0.0",
     "playwright": "^1.37.1",
     "prisma": "4.16.2",
     "svelte-check": "^3.5.1",
